--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -21,6 +21,8 @@ $color-10: #1c2f25; // dark green
 $color-11: #d31141; // red
 $color-12: #777777; // gray
 $color-13: #aaaaaa; // gray
+$color-14: #f0a06a; // orange
+$color-15: #5e6c85; // blue gray
 
 /* Fonts
 ========================================================================== */
