--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -26,6 +26,7 @@
 @import 'viewtopic';
 @import 'posting';
 @import 'other-sections';
+@import 'cp';
 @import 'header';
 @import 'footer';
 // @import 'responsive';
