--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -18,25 +18,23 @@ fieldset {
 
 .inputbox, select, .button, .button1, .button2 {
 	border: 0;
-	border-radius: 3px;	
-	line-height: rem(20px);	
+	border-radius: 3px;
+	line-height: rem(20px);
 }
 
 .inputbox, select {
 	background: $color-01;
 	color: $color-08;
-	width: 100%;	
+	width: 100%;
 	padding: 10px;
 	margin: 0 0 20px 0;
 }
 
 select {
-	min-height: 40px;	
-	background: #fff;
-}
-
-select option {
-	color: $color-08;
+	min-height: 40px;
+	option {
+		color: $color-08;
+	}	
 }
 
 label {
@@ -70,7 +68,7 @@ input[type='checkbox'], input[type='radio']  {
 	}
 	a.button {
 		right: 0;
-	}	
+	}
 }
 
 /* Buttons
@@ -79,7 +77,7 @@ input[type='checkbox'], input[type='radio']  {
 .button, .button1, .button2 {
 	display: inline-block;
 	background: $color-10;
-	color: $color-01;	
+	color: $color-01;
 	text-align: center;
 	@include transition(background 0.3s ease-in-out);
 	padding: 10px 20px;
@@ -98,7 +96,7 @@ input[type='checkbox'], input[type='radio']  {
 
 fieldset.submit-buttons {
 	text-align: center;
-	margin: 0 0 20px 0;		
+	margin: 0 0 20px 0;
 }
 
 /* Fieldset - DL
@@ -142,7 +140,7 @@ fieldset:not(.polls) {
 			&:last-child {
 				margin-bottom: 0;
 			}
-		}		
+		}
 	}
 	&.fields1 dl {
 		dt {
