--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -9,7 +9,7 @@
 ========================================================================== */
 
 #page-header .headerbar {
-	background: url($images + 'header.jpg') center -50px no-repeat;	
+	background: url($images + 'header.jpg') center -50px no-repeat;
 	background-size: cover;
 	height: 500px;
 	overflow: hidden;
@@ -20,13 +20,13 @@
 		justify-content: center;
 		align-items: center;
 		align-content: center;
-		height: 100%;	
+		height: 100%;
 		.site-description, .site-quotes {
 			@include flex(base);
 			max-width: 310px;
 		}
-		.site-description {	
-			text-align: right;		
+		.site-description {
+			text-align: right;
 			h1, h3 {
 				margin: 0;
 			}
@@ -40,11 +40,11 @@
 				}
 			}
 			h3 {
-				font-family: $font-02;  
+				font-family: $font-02;
 				font-size: rem(30px);
 				text-shadow: 2px 1px 0 rgba($color-02, 0.65), 2px 1px 5px rgba($color-02, 0.75);
 				letter-spacing: 2px;
-			}		
+			}
 		}
 		.site-quotes {
 			font-family: $font-02;
@@ -68,7 +68,7 @@
 				}
 			}
 			.quote-author {
-				text-align: right;		
+				text-align: right;
 			}
 		}
 		.header-divider {
@@ -77,16 +77,16 @@
 			height: 33.33%;
 			margin: 0 40px;
 			box-shadow: 1px 1px 0 0 rgba($color-02, 0.30);
-		}		
+		}
 	}
  	.header-overlay {
 		position: absolute;
 		@include sizing(100%, 375px);
-		background: url($images + 'header-background.png') center 0 repeat-x;	
+		background: url($images + 'header-background.png') center 0 repeat-x;
 		bottom: -200px;
 		left: 0;
 		right: 0;
-	}	
+	}
 }
 
 /* Header - Nav top
@@ -99,12 +99,12 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 20;	
+	z-index: 20;
 	& > ul {
 		margin: 0;
 		list-style: none;
 		text-align: center;
-		& > li {	
+		& > li {
 			@include inline-block(middle);
 			& > a {
 				padding: 12px 20px;
@@ -148,7 +148,7 @@
 				right: auto;
 			}
 		}
-	}	
+	}
 }
 
 /* Header - Nav top - Search Box
@@ -176,27 +176,27 @@
 		}
 	}
 	.user-information {
-		position: relative;	
+		position: relative;
 		&:before {
 			content: '';
-			display: block;			
+			display: block;
 			@include sizing(90px, 100px);
 			float: right;
 		}
 		ul {
-			list-style: none;			
-		}		
+			list-style: none;
+		}
 		.user-avatar {
 			position: absolute;
 			right: -65px;
-			top: -65px;		
+			top: -65px;
 			border-radius: 100%;
 			border: 5px solid $color-04;
 			overflow: hidden;
 			width: 150px;
 			.image-wrap {
-				height: 0;	
-				padding: 0 0 100% 0;				
+				height: 0;
+				padding: 0 0 100% 0;
 			}
 		}
 		.welcome-buttons {
@@ -211,8 +211,8 @@
 					display: block;
 					margin: 0 2.5px 5px 2.5px;
 					padding: 10px;
-				}				
-			}																														
+				}
+			}
 		}
 	}
 }
@@ -239,6 +239,7 @@
 }
 
 /* Notifications
+   Note: Header area only. UCP notifications in cp.scss
 ========================================================================== */
 
 #notification_list {
@@ -262,7 +263,7 @@
 		}
 		.header_settings {
 			right: 10px;
-			top: 0;			
+			top: 0;
 			font-family: $font-01;
 			font-variant: none;
 			font-size: rem(13px);
@@ -274,19 +275,18 @@
 			position: relative;
 			padding: 0 0 10px 0;
 			margin: 0 0 10px 0;
-			border-bottom: 1px dashed $color-03;			
+			border-bottom: 1px dashed $color-03;
 			.notification-block {
-				@include flex-flow(row nowrap);	
-				align-items: flex-start;
-				img, .notification_text {
-					@include flex(base);
-				}			
+				@include clearfix('&');
+				display: block;
 				img {
+					float: left;
 					max-width: 50px;
+					max-height: 50px;
 					border: 1px solid $color-03;
 				}
-				.notification_text {					
-					margin: 0 0 0 10px;
+				.notification_text {
+					margin: 0 0 0 60px;
 					p {
 						margin: 0 0 2px 0;
 						&:last-child {
@@ -335,15 +335,15 @@
 			a {
 				display: block;
 				border: 5px solid $color-04;
-				color: $color-01;				
+				color: $color-01;
 				&:hover {
 					color: $color-07;
 					img {
 						transform: scale(1.2,1.2);
 					}
-				}				
+				}
 			}
-			.image-wrap {				
+			.image-wrap {
 				@include sizing(100%, 0);
 				overflow: hidden;
 				padding: 0 0 55% 0;
@@ -356,7 +356,7 @@
 			p {
 				position: absolute;
 				left: 15px;
-				right: 15px;				
+				right: 15px;
 				bottom: 5px;
 				padding: 0 10px;
 				height: 30px;
