--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
@@ -282,15 +282,15 @@ ol.def-rules li {
 }
 
 /* Avatar gallery */
-.gallery label {
-	position: relative;
-	float: left;
-	margin: 10px;
-	padding: 5px;
-	width: auto;
-	border: 1px solid transparent;
-	text-align: center;
-}
+// .gallery label {
+// 	position: relative;
+// 	float: left;
+// 	margin: 10px;
+// 	padding: 5px;
+// 	width: auto;
+// 	border: 1px solid transparent;
+// 	text-align: center;
+// }
 
 /* Responsive *CP navigation
 ----------------------------------------*/
