--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -37,7 +37,7 @@
 		}
 		.button2 {
 			margin: 0 5px;
-		}		
+		}
 		&.reported {
 			background: mix(white, $color-11, 80%);
 		}
@@ -47,7 +47,7 @@
 				color: $color-07;
 			}
 		}
-	}	
+	}
 	.content {
 		margin: 0 0 20px 0;
 	}
@@ -61,9 +61,9 @@
 /* View Topic - Body - Title
 ========================================================================== */
 
-.topic-wrapper .post .postbody > div > h3, .pm.post .postbody > h3, 
+.topic-wrapper .post .postbody > div > h3, .pm.post .postbody > h3,
 .topicreview .post .postbody h3 {
-	margin: 0 0 5px 0;	
+	margin: 0 0 5px 0;
 }
 
 .topic-wrapper .post .postbody > div > h3 {
@@ -91,8 +91,8 @@
 			.responsive-hide {
 				position: absolute;
 				top: 2px;
-				right: 0;						
-				font-size: rem(13px);		
+				right: 0;
+				font-size: rem(13px);
 			}
 		}
 		.codebox {
@@ -103,7 +103,7 @@
 				margin: 0;
 				padding: 10px 20px;
 				background: $color-04;
-				color: $color-01;			
+				color: $color-01;
 			}
 		}
 	}
@@ -114,20 +114,20 @@
 
 .postbody {
 	.inline-attachment .file .attach-image, .attachbox .file dt, .attachbox .file dd {
-		max-width: 200px;	
+		max-width: 200px;
 	}
-	.inline-attachment, .attachbox {		
+	.inline-attachment, .attachbox {
 		.file .attach-image {
 			cursor: pointer;
 			margin: 0 0 5px 0;
-			line-height: 0;				
+			line-height: 0;
 			& + dd:first-of-type:before {
 				content: 'Click to expand image';
 				display: block;
 				font-size: rem(13px);
 				font-style: italic;
 			}
-		}		
+		}
 	}
 	.inline-attachment {
 		margin: 20px auto;
@@ -170,10 +170,8 @@
 /* View Topic - Polls
 ========================================================================== */
 
-fieldset.polls dl {
-	dt {
-		width: 20%;
-	}
+fieldset.polls dl dt {
+	width: 20%;
 }
 
 .topic_poll .panel {
@@ -182,7 +180,7 @@ fieldset.polls dl {
 		fieldset.polls dl {
 			position: relative;
 			&.voted {
-				font-weight: bold;		
+				font-weight: bold;
 			}
 			dt, dd {
 				line-height: 22px;
@@ -203,7 +201,7 @@ fieldset.polls dl {
 				div[class*='pollbar'] {
 					padding: 0 10px;
 					border-radius: 3px;
-					height: 22px;					
+					height: 22px;
 				}
 				div[style='width:0%;'], div[style='width: 0%;'] {
 					width: 20px !important;
@@ -224,7 +222,7 @@ fieldset.polls dl {
 				}
 				.pollbar1 {
 					background: mix(black, $color-10, 30%);
-				}																				
+				}
 			}
 			.poll_option_percent {
 				width: 20%;
@@ -232,7 +230,7 @@ fieldset.polls dl {
 			.button1 {
 				margin: 0;
 			}
-		}		
+		}
 		.vote-submitted {
 			margin: 0 0 20px 20%;
 			padding: 0 5px;
@@ -273,7 +271,7 @@ fieldset.polls dl {
 		margin: 0 0 3px 0;
 		&.profile-rank {
 			text-align: center;
-			margin: -10px 0 10px 0;			
+			margin: -10px 0 10px 0;
 			font-style: italic;
 		}
 		&.profile-contact .dropdown-container {
@@ -283,7 +281,7 @@ fieldset.polls dl {
 				right: auto;
 				top: em(30px);
 			}
-		}		
+		}
 	}
 }
 
@@ -298,7 +296,7 @@ fieldset.polls dl {
 
 .topic-wrapper .post, .pm.post {
 	margin: 0 0 20px 0;
-	padding: 0 0 20px 0;	
+	padding: 0 0 20px 0;
 	border-bottom: 1px dashed $color-04;
 	&.last {
 		border-bottom: 0;
@@ -334,7 +332,7 @@ fieldset.polls dl {
 		overflow-x: hidden;
 		overflow-y: auto;
 		margin: 0 0 20px 0;
-		padding: 0 20px 0 0;		
+		padding: 0 20px 0 0;
 	}
 	.post {
 		border-bottom: 1px dashed $color-04;
