--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -39,3 +39,5 @@ $font-03: 'Selima', $sans-serif-fb;
 
 $main-margin: 30px;
 $mobile-menu-width: 300px;
+$form-field-indent1: 300px;
+$form-field-indent2: 200px;
