--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -102,7 +102,7 @@ fieldset.submit-buttons {
 /* Fieldset - DL
 ========================================================================== */
 
-fieldset dl {
+fieldset dl:not(.pmlist) {
 	@include clearfix('&');
 	margin: 0 -10px 20px -10px;
 	dt, dd {
@@ -124,7 +124,7 @@ fieldset dl {
 }
 
 fieldset:not(.polls) {
-	dl {
+	dl:not(.pmlist) {
 		dt {
 			width: $form-field-indent1;
 			label {
@@ -146,7 +146,7 @@ fieldset:not(.polls) {
 			}
 		}
 	}
-	&.fields1 dl {
+	&.fields1 dl:not(.pmlist) {
 		dt {
 			width: $form-field-indent2;
 		}
