Working on 3.2 forum updates

--- a/glowbug-forum/_dev/styles/glowbug_v1/template/overall_footer.html
+++ b/glowbug-forum/_dev/styles/glowbug_v1/template/overall_footer.html
@@ -71,6 +71,7 @@
 <!-- EVENT overall_footer_after -->
 
 <!-- INCLUDEJS js/scripts.js -->
+<!-- INCLUDEJS js/custom.js -->
 
 <!-- IF S_PLUPLOAD --><!-- INCLUDE plupload.html --><!-- ENDIF -->
 
